# vulkan-hdr-demo

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE.txt  README.md  ZERO_CHECK.proj  ZERO_CHECK.proj.filters  abort_log.txt  build-n-run.py  cmake_install.cmake  compile_shaders.bat  compile_shaders.py  compile_shaders.vcxproj  compile_shaders.vcxproj.filters  glsl_shaders.vcxproj  glsl_shaders.vcxproj.filters  imgui.ini  split_cubemaps.py  vkdemo.vcxproj  vkdemo.vcxproj.filters  vulkan-hdr-demo.sln  vulkan-hdr-demo.vcxproj  vulkan-hdr-demo.vcxproj.filters
assets/images/: readme.txt
assets/images/furry_clouds/: XN.hdr  YP.hdr  ZN.hdr  px.hdr
assets/images/skybox/furry_clouds/: nx.hdr  ny.hdr  py.hdr  pz.hdr
assets/models/: readme.md
assets/models/CustomBall/: CustomBall.mtl  copyright.txt
assets/models/back_rooms/: license.txt  scene.gltf
assets/models/fireplace_room/: fireplace_room.mtl
assets/models/sibenik/: sibenik.mtl
assets/scenes/: crytek-sponza.json  crytek_sponza.json  dobrovic-sponza.json  dobrovic_sponza.json  fireplace_room.json  living_room.json  sibenik.json
assets/shaders/: shader.frag  shader.vert  tri_mesh.vert  vert.spv
assets/shaders/src/: TODO_REMOVE_bloom_blur.comp  TODO_REMOVE_ltm_fusion_3.comp  TODO_REMOVE_upsample2.comp  aces_hill.glsl  average_luminance.comp  bilateral.comp  bilateral_old.comp  bloom_blur.comp  bloom_combine.comp  bloom_downsample.comp  bloom_threshold.comp  bloom_upsample.comp  color.frag  color_light.frag  color_no_light.frag  colored.frag  comp_buffer.glsl  decimate.comp  decimate_new.comp  defs.glsl  diffuse_light.frag  downsample0.comp  downsample1.comp  expadp_average_luminance.comp  expadp_eye_adaptation.comp  expadp_histogram.comp  filter.comp  gamma_correction.comp  global_tone_mapping.comp  histogram.comp  light.glsl  ltm_durand_bilateral.comp  ltm_durand_bilateral_base.comp  ltm_durand_lum_chrom.comp  ltm_durand_reconstruct.comp  ltm_fusion_0.comp  ltm_fusion_01.comp  ltm_fusion_02.comp  ltm_fusion_02_old.comp  ltm_fusion_03.comp  (+38 more)
assets/shaders/src/incl/: border_modes.glsl  bump_mapping.glsl  color_spaces.glsl  compPC.incl  computeUB.incl  compute_structs.glsl  defs.glsl  durand_defs.glsl  light.glsl  luminanceSSBO.incl  luminanceSSBO_RO.incl  luminanceUB.incl  objectSSBO.incl  sampling.glsl  scenePC.incl  sceneUB.incl  scene_structs.incl  tone_mapping.glsl
scripts/: linux-build-n-run.py
src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Enigne.cpp  Enigne.h  Mesh.cpp  Mesh.h  RenderObject.cpp  RenderObject.h  UI.cpp  abort_log.cpp  abort_log.h  assets.cpp  command.cpp  command_buffer.cpp  compute.cpp  compute.h  cpp_utils.cpp  cpp_utils.h  debug.cpp  defs.h  device.cpp  draw.cpp  frame_data.cpp  framebuffer.cpp  gpu_types.h  image_view.cpp  initialization.cpp  instance.cpp  main.cpp  math_utils.cpp  math_utils.h  memory.cpp  model_loader.cpp  physical_device.cpp  pipeline.cpp  pipeline.h  postfx.cpp  postfx.h  (+30 more)
